WYSIWYG by froala and image upload using cloudinary

--- a/Bloggie.Web/appsettings.json
+++ b/Bloggie.Web/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName": "dpngd5tqa",
+    "ApiKey": "945982386618969",
+    "ApiSecret": "Fa11hB1Uu871fmHxLSut88AdK20"
+  }
 }
