authentication and authorization

--- a/Bloggie.Web/appsettings.json
+++ b/Bloggie.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "BloggieDbConnectionString": "Server=DESKTOP-2JJG4AV\\SQLEXPRESS;Database=BloggieDb;Trusted_Connection=True;TrustServerCertificate=true"
+    "BloggieDbConnectionString": "Server=DESKTOP-2JJG4AV\\SQLEXPRESS;Database=BloggieDb;Trusted_Connection=True;TrustServerCertificate=true",
+    "BloggieAuthDbConnectionString": "Server=DESKTOP-2JJG4AV\\SQLEXPRESS;Database=BloggieAuthDb;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
